<resources>
    <string name="app_name">RepairLog</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="general_information">This application is keeping your repair logs for your vehicles</string>

    <string name="see_your_vehicles">See your Vehicles</string>

    <string name="action_settings">Settings</string>
    <string name="action_chanhe_languange">UK/ΕΛ</string>
    <string name="carString">Car</string>
    <string name="motoString">Moto</string>
    <string name="change_Language_String">Change Language</string>
    <string name="main_language_changed_message">Language changed to English</string>
    <string name="choose_what_to_insert_message">Choose what do yοu want to insert Car/Moto</string>


    <!--Car Insert-->
    <string name="insert_vehicle_brand">Make</string>
    <string name="insert_vehicle_model">Model</string>
    <string name="insert_car_instructions">Please fill your car\'s details</string>
    <string name="insert_moto_instructions">Please fill your moto\'s details</string>
    <string name="insert_vehicle_add_photo">Add Photo</string>
    <string name="insert_vehicle_select_car_make">Select your cars\'s make </string>
    <string name="insert_vehicle_year">Year</string>
    <string name="insert_vehicle_car_saved">The car has been saved</string>
    <string name="insert_vehicle_moto_saved">The moto has been saved</string>
    <string name="insert_vehicle_car_save">Save</string>
    <string name="CC">cc</string>
    <string name="Date">Date</string>
    <string name="cost">Cost</string>
    <string name="desc">Description</string>
    <string name="vehicles_list">Vehicle List View</string>
    <string name="repair_list">Repair List View</string>


    <string name="Question_delete_entry">Are you sure you want to delete this entry?</string>


    <string name="title_text">Google Sign-In</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="add_new_repair">Add New Repair</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="add_cost">Add Cost</string>
    <string name="add_date">Add Date</string>
    <string name="add_desc">Add Description</string>
    <string name="add_km">Add Km</string>
    <string name="insert_repair_ok">The repair has been saved</string>
    <string name="delete_entry">Delete entry</string>
    <string name="go_to_main">Go to main page</string>
    <string name="login_to_Realm">Authenticating with Realm Object Server</string>
    <string name="add_make">Add Make</string>
    <string name="add_model">Add Model</string>
    <string name="add_cc">Add CC</string>
    <string name="add_year">Add Year</string>
    <string name="firebase_succes_login">Successful Login in Firebase with user:</string>
    <string name="firebase_fail_login">Login in Firebase Failed</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_your_location">Find your Location</string>
    <string name="exit">Are you sure??Do you want to exit??</string>
    <string name="exitHeader">Exit from RepairLog</string>
    <string name="add_other_photo">Please add other photo</string>
    <string name="repair_details">Repair Details</string>


</resources>
