<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroung"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tsotzolas.ps.com.repairlog.Activities.VehicleRepairs"
    tools:showIn="@layout/app_bar_main1"
    android:weightSum="4">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="405dp"
        android:layout_height="40dp"
        android:textColor="@color/colorWhite"
        android:text="@string/repair_list"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:weightSum="2">
    <Button
        android:id="@+id/button2"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:onClick="addNewRepair"
        android:text="@string/add_new_repair"
        android:layout_weight="2.20" />


    <Button
        android:id="@+id/button4"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:ellipsize="none"
        android:onClick="deleteVehicle"
        android:text="@string/delete_vehicle" />
</LinearLayout>
    <ListView
        android:id="@+id/vehicleList1"
        android:layout_width="382dp"
        android:layout_height="442dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"

        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintVertical_bias="0.156"
        android:layout_weight="2.98" />
</LinearLayout>