<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackgroung"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="CC"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.428"
        app:layout_constraintBottom_toTopOf="@+id/photoButton"
        app:layout_constraintRight_toLeftOf="@+id/motocc"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.16" />

    <EditText
        android:id="@+id/motocc"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="number"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/photoButton"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/motoModel"
        app:layout_constraintVertical_bias="0.259" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_moto_instructions"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012"
        android:id="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="122dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/insert_vehicle_brand"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinnerYear"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="52dp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/carModel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341"
        tools:ignore="RtlHardcoded,UnknownIdInLayout" />

    <!--android:onClick="loadMakes-->
    <!--android:editable="false"-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/insert_vehicle_model"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.062" />


    <EditText
        android:id="@+id/motoModel"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="bottom|center_horizontal"
        android:textColor="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="LabelFor,TextFields"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerYear"
        app:layout_constraintVertical_bias="0.195" />




    <Button
        android:id="@+id/photoButton"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="8dp"
        android:onClick="LoadImage"
        android:text="@string/insert_vehicle_add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        tools:ignore="RtlHardcoded"
        app:layout_constraintVertical_bias="0.584" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="296dp"
        android:layout_height="151dp"
        app:srcCompat="@color/colorBackgroung"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/photoButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription"
        app:layout_constraintHorizontal_bias="0.494" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/insert_vehicle_year"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinnerYear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <EditText
        android:id="@+id/motoBrand"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/motoModel"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="LabelFor,TextFields"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerYear"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintVertical_bias="0.279" />

    <!--<ImageView-->
    <!--android:id="@+id/imageView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginLeft="10pt"-->
    <!--android:layout_marginRight="10pt"-->
    <!--android:layout_marginTop="3pt" />-->

    <Button
        android:id="@+id/button"
        android:layout_width="390dp"
        android:layout_height="55dp"
        android:onClick="saveMoto"
        android:text="@string/insert_vehicle_car_save"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        tools:layout_editor_absoluteY="590dp"
        app:layout_constraintVertical_bias="0.454" />

</android.support.constraint.ConstraintLayout>