<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <!--android:orientation="center_horizontal"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/date_repair_log"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Date"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/date_repair_log1"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/km_repair_log"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="Km"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/km_repair_log1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/cost_repair_log"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/cost"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/cost_repair_log1"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/desc_repair_log"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/desc"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/desc_repair_log1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

